--- a/cse4280_raytracing_minho_son.ipynb
+++ b/cse4280_raytracing_minho_son.ipynb
@@ -39,14 +39,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\bold{p}(t) = \\bold{e} + (\\bold{s} - \\bold{e})t$$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -131,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Class `Camera`"
+    "### Class `Camera` copied from the [starter code](rayTracingBasic.ipynb)"
    ]
   },
   {
@@ -168,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Class `HitInfo`"
+    "### Class `HitInfo` copied from the [starter code](rayTracingBasic.ipynb)"
    ]
   },
   {
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -292,13 +284,6 @@
     "display(output)\n",
     "output.save('output.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
